fix: change z-index header view on mobile

--- a/practice-one/src/stylesheets/layout/_header.scss
+++ b/practice-one/src/stylesheets/layout/_header.scss
@@ -6,7 +6,7 @@
   &__page {
     @extend %relative;
     @extend %margin-center;
-    @extend %z-index-1;
+    @extend %z-index-99;
     padding: 54px 25px 34px;
     background-color: $bg-color-primary;
     max-width: 1390px;
